--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           name: Deploy to Railway App
           command: |
             cd bankchurn-api 
+            railway login --token $RAILWAY_TOKEN
             railway link -p fbae1c35-c558-44b0-9828-b5cecd2a1a87
             railway up --detach
 
